Bug 1655357 - Disable use of external textures on macOS in WebGPU r=aosmond

The external texture we create in WebGPU to present the canvas was taking
a different path on macOS with specific resolutions:
https://searchfox.org/mozilla-central/rev/85b84f82489451362a351b144fe5232a8e46c61c/gfx/layers/composite/TextureHost.cpp#590

Differential Revision: https://phabricator.services.mozilla.com/D97927